--- a/style.css
+++ b/style.css
@@ -1,14 +1,82 @@
 body {
-    background-color: ;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: black;
 }
 
 .title {
-    text-align: center;
-    background-color: black;
-    color: white;
-    font-style: italic;
+    /* background-color: black; */
+    color: black;
+    font-size: 25px;
+    display: flex;
+    margin: 0;
+    padding: 0;
 }
+
+.para_1 {
+    color: white;
+}
+
+.para_2 {
+    color: white;
+}
+
+.logo_suzuki {
+    width: 20px;
+    
+}
+
+
+.menu_edit {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+header {
+    height: 20vh;
+}
+
+
+nav {
+    /* border-width: 3px; */
+    /* border-color: yellow; */
+    /* border-style: solid; */
+    border:3px solid grey;
+    margin: 10px;
+    margin-left: -15px;
+    margin-right: -15px;
+    background-color: grey;
+
+    /* Répartition des element dans la nav */
+
+    display: flex;
+    gap: 15px;
+    /* justify-content: space-evenly; */
+}
+
+nav a { /* tout les element a ce trouvant dans nav */
+    display: flex;
+    border: 2px, black, solid;
+    color: black;
+    text-decoration: none;
+    padding: 5px;
+    
+}
+
+nav a:hover {  /* quand la souris passe dessus */
+    color: red;
+    font-size: large;
+}
+
+
+ul {
+    list-style-type: none; /* Pour enlever les puces devant les li */
+    display: flex;
+    gap: 15px;
+    margin: 10px;
+    padding: 0;
+
+}
+
 
 .photo_moto {
     display: block; 
@@ -35,17 +103,17 @@ body {
 
 .prix {
     text-align: center;
-    margin-top: -50px;
+    margin-top: -60px;
     font-style: italic;
+    color: white;
 }
 
 .bouton {
-
   background-color: rgb(253, 249, 6);
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
-  color: #00000;
+  color: black;
   cursor: pointer;
   display: inline-block;
   font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
